Fix homepage calendaricon alignemnt.

--- a/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
+++ b/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
@@ -138,7 +138,8 @@ table.fc-header {
   }
 }
 
-.rounded-corner .block-inner {
+.rounded-corner .block-inner,
+.page-title .block-inner{
   margin-left: 0;
 }
 /*
